--- a/style.css
+++ b/style.css
@@ -24,8 +24,7 @@ ol {
   list-style: none;
 }
 
-
-.Flipcard{
+.Flipcard {
   margin: 100px;
   width: 300px;
   height: 400px;
@@ -33,11 +32,11 @@ ol {
 }
 
 .Flipcard img {
-width: 100%;
-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
-.flipcard-inner{
+.flipcard-inner {
   position: relative;
   width: 100%;
   height: 100%;
@@ -47,18 +46,26 @@ height: 100%;
   box-shadow: 10px 10px 3px gray;
 }
 
-.Flipcard:hover .flipcard-inner{
+.Flipcard:hover .flipcard-inner {
   transform: rotateY(180deg);
 }
 
-.flipcard-front ,.flipcard-back{
+.flipcard-front,
+.flipcard-back {
   position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
 }
 
-.flipcard-back{
+.flipcard-back {
   background-color: aquamarine;
   transform: rotateY(180deg);
+}
+h1{
+  margin-top: 120px;
+
+  /* top:50%;
+left:50%; */
+  /* transform: translate(-50%,-50%); */
 }
